[SkiaSharp Forms] Added matrix transforms code

--- a/SkiaSharpForms/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos.csproj
+++ b/SkiaSharpForms/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos.csproj
@@ -102,12 +102,26 @@
     <Compile Include="Transforms\ObliqueTextPage.cs" />
     <Compile Include="Transforms\RotateAndRevolvePage.cs" />
     <Compile Include="Transforms\RotatedTextPage.cs" />
+    <Compile Include="Transforms\ShowAffineMatrixPage.xaml.cs">
+      <DependentUpon>ShowAffineMatrixPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Transforms\ShowNonAffineMatrixPage.xaml.cs">
+      <DependentUpon>ShowNonAffineMatrixPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Transforms\SkewAngleExperimentPage.xaml.cs">
       <DependentUpon>SkewAngleExperimentPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Transforms\SkewShadowTextPage.cs" />
     <Compile Include="Transforms\SkewExperimentPage.xaml.cs">
       <DependentUpon>SkewExperimentPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Transforms\TaperTransformPage.xaml.cs">
+      <DependentUpon>TaperTransformPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Transforms\TouchManipulationBitmap.cs" />
+    <Compile Include="Transforms\TouchManipulationInfo.cs" />
+    <Compile Include="Transforms\TouchManipulationPage.xaml.cs">
+      <DependentUpon>TouchManipulationPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Transforms\TranslateTextEffectsPage.cs" />
     <Compile Include="Transforms\UglyAnalogClockPage.cs" />
@@ -204,6 +218,18 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Transforms\ShowAffineMatrixPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Transforms\ShowNonAffineMatrixPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Transforms\SkewExperimentPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
@@ -211,6 +237,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Transforms\SkewAngleExperimentPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Transforms\TaperTransformPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Transforms\TouchManipulationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -229,6 +267,12 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Media\Banana.jpg" />
+    <EmbeddedResource Include="Media\FacePalm.jpg" />
+    <EmbeddedResource Include="Media\MountainClimbers.jpg" />
+    <EmbeddedResource Include="Media\SeatedMonkey.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
